--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.4",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3"
   }
 }
